--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^6.0.0
+  youtube_player_flutter: ^8.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
